# FoxDriveOpencv

./: .gitignore  Readme  pyproject.toml
foxdriveopencv/: __main__.py
foxdriveopencv/pipeline/: videothread.py
foxdriveopencv/utils/: Consts.py  filedownloader.py
