[tool.poetry]
name = "foxdriveopencv"
version = "0.1.0"
description = ""
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
